syntax = "proto3";

package lastbackend.example;

option go_package = "github.com/lastbackend/toolkit/examples/service/gen;servicepb";

import "github.com/lastbackend/toolkit/protoc-gen-toolkit/toolkit/options/annotations.proto";
import "github.com/lastbackend/toolkit/examples/service/apis/ptypes/messages.proto";

// =====================================================
// Generate mocks
// =====================================================
option (toolkit.tests_spec) = {
  mockery: {
    package: "github.com/lastbackend/toolkit/examples/service/tests/service_mocks"
  }
};

// =====================================================
// Install clients
// =====================================================
option (toolkit.plugins) = {
  prefix: "pgsql"
  plugin: "postgres_gorm"
};

option (toolkit.plugins) = {
  prefix: "redis"
  plugin: "redis"
};


// =====================================================
// RPC methods
// =====================================================
service Example {
  //  option (toolkit.http_server) = {
  //    middlewares: [
  //      "pgsql"
  //    ]
  //  };

  option (toolkit.service).plugins = {
    prefix: "redis1"
    plugin: "redis"
  };

  //  Example methods
  rpc HelloWorld(HelloWorldRequest) returns (HelloWorldResponse) {
    //    option (toolkit.http_server) = {
    //      middlewares: [
    //        "pgsql"
    //      ]
    //    };
  }
};

service Sample {
  option (toolkit.service).plugins = {
    prefix: "redis2"
    plugin: "redis"
  };
};
